--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,7 @@ h1 {
   height: 60px;
   margin: 0;
   line-height: 1.6;
-  background: #000;
+  background: #fff;
   color: #aaa;
   background: -webkit-linear-gradient(right, #333, #aaa);
   -webkit-background-clip: text;
