--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,15 +21,20 @@ h1 {
 h2 {
   font-size: 1.9em;
   margin: 20px 0;
-  font-weight: normal;
+  font-weight: lighter;
   border-bottom: 1px solid #bbb;
   width: 750px; }
 
 h3 {
+  margin: 0;
   font-size: 1.6em;
-  margin: 0; }
+  font-weight: lighter; }
 
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #fff;
   width: 100%;
   height: 60px;
   margin: 0;
@@ -69,7 +74,8 @@ ul li a:hover {
 
 .pro-container {
   width: 750px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  padding-bottom: 10px; }
 
 .pro-crd {
   margin: 40px 0; }
@@ -137,11 +143,16 @@ ul li a:hover {
 
 .home-container {
   width: 850px;
-  margin: 20px auto 300px auto; }
+  margin: 0 auto 300px auto;
+  padding-top: 100px; }
 
 .contact-container {
-  border: 1px dashed red;
-  width: 850px;
-  margin: 20px auto 800px auto; }
+  width: 750px;
+  margin: 0px auto 800px auto; }
+
+.home-heading {
+  text-align: center;
+  font-weight: lighter;
+  font-size: 1.75em; }
 
 /*# sourceMappingURL=styles.css.map */
