--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,7 +66,8 @@ ul li a {
   color: #777; }
 
 ul li a:hover {
-  border-bottom: 2px solid #bbb; }
+  border-bottom: 2px solid #000;
+  color: #000; }
 
 .content-container {
   width: 100%; }
